--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.20.1",
     "popper.js": "^1.16.1",
     "rxjs": "^7.5.1",
+    "sweetalert2": "^11.4.0",
     "tslib": "^2.3.1",
     "zone.js": "^0.11.4"
   },
